# world

./: .gitignore  23336126report.html  23336126report.md  CMakeLists.txt  ProjectLog.md  README.md  World说明报告.md  imgui.ini  presentation.md  script.md  忏悔报告.md  验证检查报告.md
.github/prompts/: general.prompt.md
build-mycraft/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  mycraft
grass_puts/: credits.txt  pack.mcmeta
grass_puts/assets/minecraft/blockstates/: grass_block.json
grass_puts/assets/minecraft/models/block/grass/grass_block/: grass_block_top0.json  grass_block_top1.json  grass_block_top2.json  grass_block_top3.json  grass_block_top4.json
shaders/: block.frag  block.vert  shadow.vert
src/: block.cpp  camera.cpp  camera.h  chunk.cpp  chunk.h  main.cpp  mesh.h  raycast.cpp  raycast.h  shader.cpp  shader.h  texture_atlas.cpp  texture_atlas.h  voxel_block.h  world.cpp  world.h
